<resources>
    <string name="app_name">YuchBox</string>
    <string name="title_debug_info">Debug</string>
    <string name="title_mail">YuchBox Mail</string>
    <string name="debug_info_no_info">Opps! No debug information.</string>
    <string name="debug_info_menu_clear">Clear</string>
    <string name="debug_info_menu_copy">Copy To Clipboard</string>
    <string name="debug_info_menu_copy_ok">Copy To Clipboard OK!</string>
    <string name="debug_info_menu_help">Help</string>
    <string name="login_init_official_host">I use official service host</string>
    <string name="login_init_own_host">I have own service host</string>
    <string name="login_account">Account:</string>
    <string name="login_account_hint">Email address format</string>
    <string name="login_login_btn">Login Account</string>
    <string name="login_register_btn">Register Free</string>
    <string name="login_login_account_error">YuchBox Account is Email format</string>
    <string name="login_login_pass_error">User Password is equal or more than 6 numbers or letters</string>
   	<string name="login_dlg_wait_prompt">Logining Account...</string>
    <string name="login_title_name">YuchBox User State</string>
    <string name="login_connect_deamon_state">YuchBox Connection Notification</string>
    <string name="login_connect_deamon_state_detail">Can set display state in General Preference</string>
    <string name="login_connect_deamon_state_connect">Connection OK!</string>
    <string name="login_connect_deamon_state_connecting">Connecting...</string>
    <string name="login_connect_deamon_state_disconnect">User Disconnect.</string>
    <string name="login_connect_deamon_state_disconnect_detail">Please wait for a moment to quit( after a YuchBox pulse ) and release memory...</string>
    <string name="start_svr_but">Connect</string>
    <string name="stop_svr_but">Disconnect</string>
    <string name="login_host">Svr Host:</string>
    <string name="login_host_hint">Domain or IP address</string>
    <string name="login_host_error_prompt">Please input right Host (Domain or IP address)</string>
    <string name="login_port">Svr Port:</string>
    <string name="login_port_hint">Connect port(100-65535) </string>
    <string name="login_port_error_prompt">Please input right Port (1-65535)</string>
    <string name="login_user_pass">User Pass:</string>
    <string name="login_user_pass_hint">User define password</string>
    <string name="login_user_pass_error_prompt">Please input UserPass</string>
    <string name="login_state_disconnect">Disconnect.</string>
    <string name="login_state_connecting">Connecting...</string>
    <string name="login_state_connected">Connected.</string>
    <string name="login_menu_setting">Preference</string>
    <string name="login_menu_about">About</string>
    <string name="login_menu_account">Account</string>
    <string name="login_beta_prompt"> - Only available for NET APN(such as cmnet uninet ctnet) WIFI network. WAP is NOT support.</string>
    <string name="yuch_logon_quit_ask">Are you sure quit to login or signin?</string>
    <string name="yuch_logon_sign_title">YuchBox Official Service Login|Signin</string>
    <string name="yuch_logon_menu_refresh">Refresh Site</string>
    <string name="yuch_logon_menu_quit">Quit Sign In</string>
    <string name="yuch_logon_sync_ok_prompt">Sync OK! The information has filled and connected. Can press return key to quit this step. Please visit http://www.yuchs.com/ to get detail.</string>
    <string name="login_pref_title">General Preference</string>
    <string name="login_pref_connect_category">Connect</string>
    <string name="login_pref_use_ssl">Use SSL</string>
    <string name="login_pref_use_ssl_sum">Must generate a SSL cert file and load in server.</string>
    <string name="login_pref_pass_key">Crypt Key</string>
    <string name="login_pref_pass_key_sum">Send to server to encrypt password which has been crypt</string>
    <string name="login_pref_auto_run">Automatic Run Start</string>
    <string name="login_pref_auto_run_sum">Automatic run and connect to server when system start</string>
    <string name="login_pref_pulse_interval">Pulse Interval</string>
    <string name="login_pref_pulse_interval_sum">Maintain the network connection (the shorter the more power, better connection quality))</string>
	<string name="login_pref_prompt_category">Notification</string>
    <string name="login_pref_whole_day">Notifiy Whole Day</string>
    <string name="login_pref_whole_day_sum">As long as the connection is normal, will notify whole day</string>
    <string name="login_pref_whole_day_sum_off">Will not notify if receive message</string>
    <string name="login_pref_start_prompt">Notify Start Time</string>
    <string name="login_pref_start_prompt_sum">This time of day from the beginning to notify</string>
    <string name="login_pref_end_prompt">Notify End Time</string>
    <string name="login_pref_end_prompt_sum">Will not notify after this time</string>
	<string name="login_pref_prompt_disconnect">Notify After Disconnect</string>
    <string name="login_pref_prompt_disconnect_sum">Notify user if connect server failed 2 times</string>
    <string name="login_pref_prompt_disconnect_vibrate">Disconnect Vibrate</string>
    <string name="login_pref_prompt_disconnect_vibrate_sum">Vibrate when connection is disconnect</string>
    <string name="login_pref_prompt_disconnect_sound">Disconnect Sound</string>
    <string name="login_pref_prompt_disconnect_sound_sum">Notification sound when Connection is disconnect</string>
	<string name="login_pref_statistics_category">Statistics</string>
	<string name="login_pref_statistics">Network Traffic Statistics</string>
    <string name="login_pref_statistics_up">Upload:</string>
    <string name="login_pref_statistics_down">Download:</string>
    <string name="login_pref_statistics_total">Total:</string>
    <string name="login_pref_statistics_clear_prompt">Are you sure to clear this statistics?</string>
    <string name="login_pref_prompt_always_display_state">Always Display State</string>
    <string name="login_pref_prompt_always_display_state_sum_on">Always display connect state in the notification bar</string>
    <string name="login_pref_prompt_always_display_state_sum_off">Display state only disconncet in the notifcation bar</string>
    <string name="dlg_info_title">YuchBox Prompt:</string>
    <string name="dlg_info_confirm">I know it</string>
    <string name="dlg_info_copy">Copy To Clipboard</string>
    <string name="dlg_info_yesno_confirm">Yes</string>
    <string name="dlg_info_yesno_cancel">No</string>
    <string name="dlg_wait_text">Please wait a moment...</string>
    <string name="no_mail">no mail, please wait refresh...</string>
    <string name="mail_me_address">Me</string>
    <string name="mail_over_max_length_prompt">--YuchBox Prompt\nMail content is over the max length</string>
    <string name="mail_notification_ticker">New Mail Coming!</string>
    <string name="mail_failed_notification_ticker">Send Mail Failed!</string>
    <string name="mail_time_year">-</string>
    <string name="mail_time_month">-</string>
    <string name="mail_time_day"> </string>
    <string name="mail_delete_prompt">Delete</string>
    <string name="mail_read_prompt">Read</string>
    <string name="mail_list_compose_new_mail">Compose</string>
    <string name="mail_home_empty_group">Opps, there is not any mail...</string>
    <string name="mail_list_menu_connect_state">State</string>
    <string name="mail_home_read_btn">Mark Read</string>
    <string name="mail_home_unread_btn">Mark Unread</string>
    <string name="mail_home_item_context_menu_del">Delete it</string>
    <string name="mail_home_item_context_menu_read">Mark Read</string>
    <string name="mail_home_item_context_menu_del_former">Delete all former mails</string>
    <string name="mail_home_item_context_menu_read_former">Mark all former mails as read</string>
    <string name="mail_home_item_context_menu_cancel">Cancel</string>
    <string name="mail_open_reply_btn">Reply</string>
    <string name="mail_open_reply_all_btn">Reply All</string>
    <string name="mail_open_delete_btn">Delete</string>
    <string name="mail_open_forward_btn">Forward</string>
    <string name="mail_open_recipient_addr_prefix">Recipient:</string>
    <string name="mail_open_html_switch">Touch To Show HTML Part</string>
    <string name="mail_open_show_former_mail">Touch To Show Former Mail</string>
    <string name="mail_open_scroll_top">Touch To Scroll Top</string>
    <string name="mail_open_resend_btn">Resend</string>
    <string name="mail_open_resend_need_connectDeamon_prompt">Can\'t resend until start connect with server.</string>
    <string name="mail_open_delete_prompt">Are you sure delete this mail group?</string>
    <string name="mail_open_reference_line_replace">Click to display original reference part</string>
    <string name="mail_open_detail_from">From</string>
    <string name="mail_open_detail_to">To</string>
    <string name="mail_open_detail_reply_to">Reply To</string>
    <string name="mail_open_detail_cc">Cc</string>
    <string name="mail_open_detail_bcc">Bcc</string>
    <string name="mail_open_detail_email_click_prompt">Choose the sender:</string>
    <string name="mail_open_attach_prompt_disconnect">Can\'t be downloaded when disconnect server</string>
    <string name="mail_open_attach_prompt_has_download">There is a attachment downloading</string>
    <string name="mail_open_attach_prompt">Start download attachment</string>
    <string name="mail_open_attach_select_prompt">Select a Attachment</string>
    <string name="mail_open_attach_cancel_btn">Cancel Download</string>
    <string name="mail_open_attach_open_btn">Open</string>
    <string name="mail_open_attach_cancel_btn_prompt">Are you sure stop downloading?</string>
    <string name="mail_open_context_menu_copy">Copy text to clipboard</string>
    <string name="mail_compose_title">YuchBox Mail Compose</string>
    <string name="mail_compose_to">To</string>
    <string name="mail_compose_cc">Cc</string>
    <string name="mail_compose_bcc">Bcc</string>
    <string name="mail_compose_subject">Subject</string>
    <string name="mail_compose_body">Mail Compose</string>
    <string name="mail_compose_send_btn">Send</string>
    <string name="mail_compose_save_btn">SaveAsDraft</string>
    <string name="mail_compose_discard_btn">Discard</string>
    <string name="mail_compose_ref_lable">Reference Mail (touch to discard reference):</string>
    <string name="mail_compose_reply_prefix" >Re:\u0020</string>
    <string name="mail_compose_forward_prefix">Fwd:\u0020</string>
	<string name="mail_pref_title">Mail Preference</string>
	<string name="mail_pref_operation_category">Operation</string>
	<string name="mail_pref_own_account">Default Account</string>
	<string name="mail_pref_own_account_sum">The account of sending from which been pushed by YuchBox server</string>
	<string name="mail_pref_discard_org_mail">Discard Reply Mail</string>
	<string name="mail_pref_discard_org_mail_sum">Auto-discard original mail text when reply(to save network traffic)</string>
	<string name="mail_pref_del_remote_mail">Delete Remote Mail</string>
	<string name="mail_pref_del_remote_mail_sum">Delete remote server mail simultaneously when delete local one</string>
	<string name="mail_pref_send_to_copy">Send To Copy</string>
	<string name="mail_pref_send_to_copy_sum">Copy a mail to sent folder when sending(NOT supports POP3)</string>
	<string name="mail_pref_prompt_category">Notification</string>
	<string name="mail_pref_vibrate">Vibreate</string>
	<string name="mail_pref_vibrate_sum">Vibreate when new mail comes or send failed.</string>
	<string name="mail_pref_sound">Sound</string>
	<string name="mail_pref_sound_sum">Sound when new mail comes or send failed.</string>
	<string name="mail_pref_statistics">Mail Statistics</string>
</resources>