<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/mail_pref_title">
	
	<PreferenceCategory
		android:title="@string/mail_pref_operation_category">
		<ListPreference
			android:key="config_mail_own_account"
			android:title="@string/mail_pref_own_account"
			android:entries="@array/mail_pref_default_account"
			android:entryValues="@array/mail_pref_default_account_values"
			android:summary="@string/mail_pref_own_account_sum"
			android:dialogTitle="@string/mail_pref_own_account"/>
		<CheckBoxPreference
			android:key="config_mail_discard_org_mail"
			android:title="@string/mail_pref_discard_org_mail"
			android:summary="@string/mail_pref_discard_org_mail_sum"/>
			
		<CheckBoxPreference
			android:key="config_mail_del_remote"
			android:title="@string/mail_pref_del_remote_mail"
			android:summary="@string/mail_pref_del_remote_mail_sum"/>
			
		<CheckBoxPreference
			android:key="config_mail_send_to_copy"
			android:title="@string/mail_pref_send_to_copy"
			android:summary="@string/mail_pref_send_to_copy_sum"/>
		
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/mail_pref_prompt_category">
		<CheckBoxPreference 
			android:key="config_mail_vibrate"
			android:title="@string/mail_pref_vibrate"
			android:summary="@string/mail_pref_vibrate_sum"/>
		<RingtonePreference
			android:key="config_mail_sound"
			android:title="@string/mail_pref_sound"
			android:summary="@string/mail_pref_sound_sum"
			android:ringtoneType="all" />
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/mail_pref_statistics_category">
		<Preference
			android:key="config_mail_statistics"
			android:title="@string/mail_pref_statistics"
			android:enabled="true"/>
	</PreferenceCategory>
</PreferenceScreen>
