<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#FFF">
  
  	<ScrollView 
  		android:layout_width="fill_parent"
  		android:layout_height="fill_parent"
  		android:layout_weight="1">
  		<LinearLayout 
  			android:id="@+id/mail_compose_main_view"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:orientation="vertical" 
  			android:layout_marginRight="5dp">
  			<AutoCompleteTextView
				android:id="@+id/mail_compose_to"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/mail_compose_to"/>
		  	
			<AutoCompleteTextView
				android:id="@+id/mail_compose_cc"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/mail_compose_cc"
				android:visibility="gone"/>
				
			<AutoCompleteTextView
				android:id="@+id/mail_compose_bcc"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/mail_compose_bcc"
				android:visibility="gone"/>
				
			<EditText
				android:id="@+id/mail_compose_subject"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/mail_compose_subject"/>
				
			<EditText
				android:id="@+id/mail_compose_body"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:minHeight="200dp"
				android:hint="@string/mail_compose_body"
				android:gravity="top" />
			<TextView 
				android:id="@+id/mail_compose_ref_label"
				android:layout_width="fill_parent"
				android:layout_height="40dp"
				android:background="#eee"
				android:textSize="15dp"
				android:gravity="center"
				android:text="@string/mail_compose_ref_lable"
				android:visibility="visible"/>
  		</LinearLayout>
	</ScrollView>
	   
    <LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="#888"
		android:paddingTop="3dp">		
		<Button 
			android:id="@+id/mail_compose_send_btn"
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:text="@string/mail_compose_send_btn"/>
			
		<Button 
			android:id="@+id/mail_compose_save_btn"
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:text="@string/mail_compose_save_btn"/>
			
		<Button 
			android:id="@+id/mail_compose_discard_btn"
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:text="@string/mail_compose_discard_btn"
			android:paddingRight="5dp"/>
	</LinearLayout>
</LinearLayout>
